2001-07-02  Gary V. Vaughan  <gary@gnu.org>

	* automake.in (scan_one_configure_file):  Diagnose use of
	autoconf-2.50's AC_CONFIG_HEADERS macro as an error.

2001-06-24  Gary V. Vaughan  <gary@gnu.org>

	From Martin Dickopp <firefly-mail@gmx.net>:
	* missing: replace hard coded configure.in with $configure_ac,
	set appropriately according to file presence.

2001-06-23  Akim Demaille  <akim@epita.fr>

	* m4/ccstdc.m4, m4/cond.m4, m4/dmalloc.m4, m4/error.m4,
	* m4/header.m4, m4/init.m4, m4/lex.m4, m4/lispdir.m4,
	* m4/maintainer.m4, m4/missing.m4, m4/mktime.m4, m4/multi.m4,
	* m4/obstack.m4, m4/protos.m4, m4/ptrdiff.m4, m4/regex.m4,
	* m4/sanity.m4, m4/strtod.m4, m4/termios.m4, m4/winsz.m4:
	Quote the name being defined.
	* tests/depacl.test: Adjust.

2001-06-10  Gary V. Vaughan  <gary@gnu.org>

	* configure.in (AM_INIT_AUTOMAKE):  Bumped the version number to
	1.4-p4a.

	Automake 1.4-p4 was released.

	* NEWS: Updated.
	* config.sub: Updated from master copy at GNU -- config.guess
	has not changed since the last release.
	* configure.in (AM_INIT_AUTOMAKE): Set the fork identifier to
	patch level 3, 1.4-p4.
	* stamp-vti: Regenerated.
	* version.texi: Ditto.
	* configure: Ditto.

	From Masaki WAKABAYASHI <masaki@quox.org>:
	* automake.in: Substitute $configure_ac for @CONFIGURE_AC@
	while writing Makefile.in.
	* empty.test: Ditto.
	* remake-hdr.am: Use @CONFIGURE_AC@ instead of hardcoding
	configure.in.
	* remake.am: Ditto.
	* texi-vers.am: Ditto.

2001-06-08  Tom Tromey  <tromey@redhat.com>

	* tests/version4.test: New file.
	* automake.in (version_check): New sub.
	(handle_options): Use it.
	* tests/Makefile.am (AUTOMAKE_OPTIONS): Removed.
	(TESTS): Added version4.test.
	* m4/Makefile.am (AUTOMAKE_OPTIONS): Removed.
	* Makefile.am (AUTOMAKE_OPTIONS): Remove `gnits'.

2001-06-07  Gary V. Vaughan  <gary@gnu.org>

	* configure.in (AM_INIT_AUTOMAKE):  Bumped the version number to
	1.4-p3a.

	Automake 1.4-p3 was released.
